WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135470
Subpixel rendering: InlineTextBox mistakenly rounds offset value before painting.
https://bugs.webkit.org/show_bug.cgi?id=135470
Summary
Subpixel rendering: InlineTextBox mistakenly rounds offset value before paint...
alan
Reported
2014-07-31 13:53:13 PDT
see InlineTextBox::paint() -> roundedForPainting(paintOffset, renderer().document().deviceScaleFactor());
Attachments
Patch
(12.54 KB, patch)
2014-08-03 11:58 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.99 KB, patch)
2014-08-03 12:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(478.21 KB, application/zip)
2014-08-03 13:39 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(504.54 KB, application/zip)
2014-08-03 13:58 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(505.77 KB, application/zip)
2014-08-03 15:00 PDT
,
Build Bot
no flags
Details
Patch
(13.02 KB, patch)
2014-08-04 12:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-08-03 11:39:12 PDT
paint offset: 0.1px location: 0.2px; -> 0.3px -> snapped to 0.5px; (2x displays) vs. paint offset: 0.1px -> snapped to 0px; location: 0.2px; -> 0.2px -> snapped to 0px;
alan
Comment 2
2014-08-03 11:58:58 PDT
Created
attachment 235948
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-08-03 12:18:40 PDT
Comment on
attachment 235948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235948&action=review
> Source/WebCore/ChangeLog:12 > + However to ensure that text is painted to where we expect it to be painted, we force our > + snapping strategy on final coordinates. -for example, CG ceils vertically (in horizontal context) > + vs our rounding strategy.
I don't think I understand this sentence.
alan
Comment 4
2014-08-03 12:40:13 PDT
Created
attachment 235949
[details]
Patch
Build Bot
Comment 5
2014-08-03 13:39:29 PDT
Comment on
attachment 235949
[details]
Patch
Attachment 235949
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4722611997114368
New failing tests: fast/inline/hidpi-inline-selection-leaves-gap.html
Build Bot
Comment 6
2014-08-03 13:39:32 PDT
Created
attachment 235950
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 7
2014-08-03 13:58:02 PDT
Comment on
attachment 235949
[details]
Patch
Attachment 235949
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5102239861440512
New failing tests: fast/inline/hidpi-inline-selection-leaves-gap.html
Build Bot
Comment 8
2014-08-03 13:58:06 PDT
Created
attachment 235951
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 9
2014-08-03 15:00:44 PDT
Comment on
attachment 235949
[details]
Patch
Attachment 235949
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5895713594540032
New failing tests: fast/inline/hidpi-inline-selection-leaves-gap.html
Build Bot
Comment 10
2014-08-03 15:00:54 PDT
Created
attachment 235952
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 11
2014-08-04 12:06:49 PDT
Created
attachment 235978
[details]
Patch
WebKit Commit Bot
Comment 12
2014-08-04 15:01:25 PDT
Comment on
attachment 235978
[details]
Patch Clearing flags on attachment: 235978 Committed
r172008
: <
http://trac.webkit.org/changeset/172008
>
WebKit Commit Bot
Comment 13
2014-08-04 15:01:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug